MBS-9323: Fix long URLs distorting page layout. (#505)

--- a/root/static/styles/layout.less
+++ b/root/static/styles/layout.less
@@ -396,6 +396,7 @@ div.warning img.warning {
     padding-left: 0;
     list-style-image: none;
     list-style-type: none;
+    word-break: break-all;
 }
 
 #sidebar ul.external_links li {
